--- a/index.html
+++ b/index.html
@@ -9,9 +9,71 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
 	<!-- Call my CSS -->
-	<link rel="stylesheet" href="css/mains.css">
+	<link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<a class="navbar-brand" href="#">Navbar</a>
+		<button 
+			class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNav">
+			<ul class="navbar-nav">
+				<li class="nav-item active">
+					<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Features</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Pricing</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link disabled" href="#">Disabled</a>
+				</li>
+			</ul>
+		</div>
+	</nav>
+	<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+		<div class="carousel-inner">
+			<div class="carousel-item active">
+				<img class="d-block w-100" src="https://www.lonelyplanet.fr/sites/lonelyplanet/files/styles/manual_crop/public/media/destination/slider/mobile/marseille2.jpg?itok=xFKeraY3" alt="First slide">
+			</div>
+			<div class="carousel-item">
+				<img class="d-block w-100" src="https://www.lonelyplanet.fr/sites/lonelyplanet/files/styles/manual_crop/public/media/destination/slider/mobile/marseille2.jpg?itok=xFKeraY3" alt="Second slide">
+			</div>
+			<div class="carousel-item">
+				<img class="d-block w-100" src="https://www.lonelyplanet.fr/sites/lonelyplanet/files/styles/manual_crop/public/media/destination/slider/mobile/marseille2.jpg?itok=xFKeraY3" alt="Third slide">
+			</div>
+		</div>
+	</div>
+
+	<div class="container">
+		<div class="row">
+			<div class="col-12 col-md-6">
+				<div class="row">
+					<div class="col-md-4">
+						<img src="https://www.lonelyplanet.fr/sites/lonelyplanet/files/media/article/image/fotolia_89107711_subscription_monthly_m.jpg" alt="picture 1">
+					</div>
+					<div class="col-md-8">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto voluptate consequatur vel distinctio inventore repellendus, nobis? Quibusdam possimus nihil natus expedita. Eveniet laboriosam, et consectetur perspiciatis excepturi tenetur ab recusandae.</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-12 col-md-6">
+				<div class="row">
+					<div class="col-12 col-md-4">
+						<img src="https://www.lonelyplanet.fr/sites/lonelyplanet/files/media/article/image/fotolia_89107711_subscription_monthly_m.jpg" alt="picture 1">
+					</div>
+					<div class="col-12 col-md-8">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto voluptate consequatur vel distinctio inventore repellendus, nobis? Quibusdam possimus nihil natus expedita. Eveniet laboriosam, et consectetur perspiciatis excepturi tenetur ab recusandae.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
 
 	<!-- Call BOOTSTRAP JS -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
