--- a/index.html
+++ b/index.html
@@ -73,7 +73,38 @@
 			</div>
 		</div>
 	</div>
-
+	<div class="container-fluid footer">
+		<div class="row">
+			<div class="col">
+				<h3>Reseau 1</h3>
+				<img src="https://cdn.pixabay.com/photo/2017/02/01/22/02/mountain-landscape-2031539_1280.jpg" alt="">
+			</div>
+			<div class="col">
+				<h3>Reseau 2</h3>
+				<img src="https://cdn.pixabay.com/photo/2017/02/01/22/02/mountain-landscape-2031539_1280.jpg" alt="">
+			</div>
+			<div class="col">
+				<h3>Reseau 3</h3>
+				<img src="https://cdn.pixabay.com/photo/2017/02/01/22/02/mountain-landscape-2031539_1280.jpg" alt="">
+			</div>
+			<div class="col">
+				<h3>Reseau 4</h3>
+				<img src="https://cdn.pixabay.com/photo/2017/02/01/22/02/mountain-landscape-2031539_1280.jpg" alt="">
+			</div>
+			<div class="col">
+				<h3>Reseau 5</h3>
+				<img src="https://cdn.pixabay.com/photo/2017/02/01/22/02/mountain-landscape-2031539_1280.jpg" alt="">
+			</div>
+			<div class="col">
+				<h3>Reseau 6</h3>
+				<img src="https://cdn.pixabay.com/photo/2017/02/01/22/02/mountain-landscape-2031539_1280.jpg" alt="">
+			</div>
+			<div class="col">
+				<h3>Reseau 7</h3>
+				<img src="https://cdn.pixabay.com/photo/2017/02/01/22/02/mountain-landscape-2031539_1280.jpg" alt="">
+			</div>
+		</div>
+	</div>
 
 	<!-- Call BOOTSTRAP JS -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
