--- a/index.html
+++ b/index.html
@@ -73,24 +73,21 @@
 			</div>
         </div>
         <footer>
-            <h1>footer hello</h1>
-            <h1>footer hello</h1>
-            <h1>footer hello</h1>
-            <h1>footer hello</h1>
-            <h1>footer hello</h1>
-            <h1>footer hello</h1>
-            <h1>footer hello</h1>
-            <h1>footer hello</h1>
-            <h1>footer hello</h1>
-            <h1>footer hello</h1>
-            <h1>footer hello</h1>
-            <h1>footer hello</h1>
-            <h1>footer hello</h1>
-            <h1>footer hello</h1>
-            <h1>footer hello</h1>
-            <h1>footer hello</h1>
-            <h1>footer hello</h1>
-v            <h1>footer hello</h1>
+       	    <h1>hello world</h1>
+            <h1>hello world</h1>
+            <h1>hello world</h1>
+            <h1>hello world</h1>
+            <h1>hello world</h1>
+            <h1>hello world</h1>
+            <h1>hello world</h1>
+            <h1>hello world</h1>
+            <h1>hello world</h1>
+            <h1>hello world</h1>
+            <h1>hello world</h1>
+            <h1>hello world</h1>
+            <h1>hello world</h1>
+            <h1>hello world</h1>
+            <h1>hello world</h1>
         </footer>
 	</div>
 	<div class="container-fluid footer">
