fix conflict footer

--- a/index.html
+++ b/index.html
@@ -73,23 +73,6 @@
 			</div>
         </div>
         <footer>
-<<<<<<< HEAD
-       	    <h1>hello world</h1>
-            <h1>hello world</h1>
-            <h1>hello world</h1>
-            <h1>hello world</h1>
-            <h1>hello world</h1>
-            <h1>hello world</h1>
-            <h1>hello world</h1>
-            <h1>hello world</h1>
-            <h1>hello world</h1>
-            <h1>hello world</h1>
-            <h1>hello world</h1>
-            <h1>hello world</h1>
-            <h1>hello world</h1>
-            <h1>hello world</h1>
-            <h1>hello world</h1>
-=======
             <h1>papa hello</h1>
             <h1>papa hello</h1>
             <h1>papa hello</h1>
@@ -107,8 +90,7 @@
             <h1>papa hello</h1>
             <h1>papa hello</h1>
             <h1>papa hello</h1>
-v            <h1>papa hello</h1>
->>>>>>> 345fd274fd34a9422596e204c62dd956cf37a007
+            <h1>papa hello</h1>
         </footer>
 	</div>
 	<div class="container-fluid footer">
